<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="data"
            type="com.mobilityrocks.databinding_android.views.ForgotPasswordActivity" />

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="25sp"
            android:textColor="@color/colorWhite"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_desc"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:textColorHint="@color/colorWhite"
            android:backgroundTint="@color/colorWhite"
            android:layout_marginTop="15dp"
            android:padding="15sp"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/reset"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_back"
            android:padding="10sp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:onClick="navgatetoLogin"
            android:textColor="@color/selector_text_white"
            android:layout_marginTop="40dp"/>

    </LinearLayout>

</layout>