<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="RegisterViewModel"
            type="com.mobilityrocks.databinding_android.viewmodels.RegisterViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:padding="10sp"
                    android:singleLine="true"
                    app:addTextChangedListener="@{RegisterViewModel.emailTextWatcher}"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"
                    android:inputType="textEmailAddress"
                    android:padding="10sp"
                    android:singleLine="true"
                    app:addTextChangedListener="@{RegisterViewModel.usernameTextWatcher}"
                     />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textEmailAddress"
                    android:padding="10sp"
                    android:singleLine="true"
                    app:addTextChangedListener="@{RegisterViewModel.passwordTextWatcher}"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textEmailAddress"
                    android:padding="10sp"
                    android:singleLine="true"
                    app:addTextChangedListener="@{RegisterViewModel.confirmPasswordTextWatcher}"
                   />

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/errorMessageTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5sp"
                android:clickable="true"
                android:padding="10sp"
                android:gravity="center"
                android:textColor="@color/colorRed" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:background="@color/colorPrimary"
                android:clickable="true"
                android:text="Register"
                android:onClick="@{(v)->RegisterViewModel.firebaseRegisterCredentials()}"
                android:textColor="@color/selector_text_white" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5sp"
                android:clickable="true"
                android:padding="10sp"
                android:gravity="center"
                android:text="@string/already_have_account_text"
                android:textColor="@color/selector_text_primary_dark" />




        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:visibility="gone" />

    </FrameLayout>

</layout>